# lllm

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  release.yml
architecture/overview/: index.html
core/agent/: index.html
core/config/: index.html
core/dialog/: index.html
core/invokers/: index.html
core/logging/: index.html
core/prompts/: index.html
core/proxy-and-sandbox/: index.html
core/runtime/: index.html
core/tactic/: index.html
docs/: getting-started.md  index.md
docs/architecture/: overview.md
docs/core/: agent-call.md  config.md  dialog.md  invokers.md  logging.md  packages.md  prompts.md  proxy-and-sandbox.md  runtime.md  tactic.md
docs/guides/: building-agents.md  project-template.md
docs/reference/: core.md  invokers.md  modules.md  proxies.md
docs/tutorials/: 01-quick-start.md  02-agents-and-dialogs.md  03-prompts.md  04-tools.md  05-tactics.md  06-config-and-discovery.md  07-logging.md  08-advanced-patterns.md  09-proxy-and-interpreter.md  index.md
examples/: README.md  basic_chat.py
examples/advanced/: proxy_interpreter.py
getting-started/: index.html
guides/building-agents/: index.html
guides/project-template/: index.html
lllm/: __init__.py
lllm/core/: __init__.py  agent.py  config.py  const.py  context.py  dialog.py  discovery.py  models.py  (+4 more)
search/: search_index.json
stylesheets/: custom.css
tutorials/: 01_getting_started.ipynb  02_tactics_and_agentic_systems.ipynb  03_advanced_features.ipynb  index.html
(+51 files in other folders)
